syntax = "proto3";
package a75f.io.device;

option java_package = "a75f.io.device";
option java_outer_classname = "MyStat";

enum MyStatRequestType_e {
  MYSTAT_REQUEST_TYPE_UNKNOWN = 0; // default for unsupported decrypt, open-enums
  MYSTAT_REQUEST_TYPE_SETTINGS = 1; // standard device settings
  MYSTAT_REQUEST_TYPE_CONTROLS = 2; // standard device controls
  MYSTAT_REQUEST_TYPE_IDU_CONTROLS = 3; // special request for Daikin-P1P2-variant controls
  MYSTAT_REQUEST_TYPE_IDU_FIELD_SETTINGS = 4; // special request for Daikin-P1P2-variant field settings
  MYSTAT_REQUEST_TYPE_SETTINGS_2 = 5; // standard device settings 2
}

message MyStatRequestMessage_t {
  MyStatRequestType_e type = 1; // enum specifies what data is being requested
}

enum MyStatTemperatureMode_e {
  MYSTAT_TEMP_MODE_SINGLE = 0;
  MYSTAT_TEMP_MODE_DUAL_FIXED_DB = 1;
  MYSTAT_TEMP_MODE_DUAL_VARIABLE_DB = 2;
  MYSTAT_TEMP_MODE_NUM_OF = 3;
}

enum MyStatProfiles_t {
  MYSTAT_PROFILE_NONE = 0;
  MYSTAT_PROFILE_CONVENTIONAL_PACKAGE_UNIT = 1;
  MYSTAT_PROFILE_HEAT_PUMP_UNIT = 2;
  MYSTAT_PROFILE_2_PIPE_FANCOIL_UNIT = 3;
  MYSTAT_PROFILE_4_PIPE_FANCOIL_UNIT = 4;
  MYSTAT_PROFILE_VRV = 5;
  MYSTAT_PROFILE_SENSE = 6;
  MYSTAT_PROFILE_NUM_OF = 7;
}


enum CpuRelayMappings_e {
  CPU_NONE             = 0;
  CPU_COOLING_STAGE_1  = 1;
  CPU_COOLING_STAGE_2  = 2;
  CPU_HEATING_STAGE_1  = 3;
  CPU_HEATING_STAGE_2  = 4;
  CPU_FAN_LOW_SPEED    = 5;
  CPU_FAN_HIGH_SPEED   = 6;
  CPU_FAN_ENABLE       = 7;
  CPU_OCCUPIED_ENABLE  = 8;
  CPU_HUMIDIFIER       = 9;
  CPU_DEHUMIDIFIER     = 10;
  CPU_RELAY_NUM_OF     = 11;
}

enum HpuRelayMappings_e {
  HPU_NONE                = 0;
  HPU_COMPRESSOR_STAGE_1  = 1;
  HPU_COMPRESSOR_STAGE_2  = 2;
  HPU_AUX_STAGE_1         = 3;
  HPU_FAN_LOW_SPEED       = 4;
  HPU_FAN_HIGH_SPEED      = 5;
  HPU_FAN_ENABLE          = 6;
  HPU_OCCUPIED_ENABLE     = 7;
  HPU_HUMIDIFIER          = 8;
  HPU_DEHUMIDIFIER        = 9;
  HPU_CHANGEOVER_TYPE_O   = 10;
  HPU_CHANGEOVER_TYPE_B   = 11;
  HPU_RELAY_NUM_OF        = 12;
}


enum TwoPipeRelayMappings_e {
  P2_NONE                = 0;
  P2_FAN_LOW_SPEED       = 1;
  P2_FAN_HIGH_SPEED      = 2;
  P2_AUX_HEAT_1          = 3;
  P2_RELAY_WATER_VALVE   = 4;
  P2_FAN_ENABLE          = 5;
  P2_OCCUPIED_ENABLE     = 6;
  P2_HUMIDIFIER          = 7;
  P2_DEHUMIDIFIER        = 8;
  P2_RELAY_NUM_OF        = 9;
}


enum FourPipeRelayMappings_e {
  P4_NONE               = 0;
  P4_FAN_LOW_SPEED      = 1;
  P4_FAN_HIGH_SPEED     = 2;
  P4_WATER_VALVE_HEAT   = 3;
  P4_WATER_VALVE_COOL   = 4;
  P4_AUX_HEAT_1         = 5;
  P4_FAN_ENABLE         = 6;
  P4_OCCUPIED_ENABLE    = 7;
  P4_HUMIDIFIER         = 8;
  P4_DEHUMIDIFIER       = 9;
  P4_RELAY_NUM_OF       = 10;
}


message MyStatRelay_t {
   optional bool relayEnable = 1;
    oneof relayMapping {
        CpuRelayMappings_e cpuRelay = 2;  // Relay mappings for CPU profile
  	    HpuRelayMappings_e hpuRelay = 3;  // Relay mappings for HPU profile
  	    TwoPipeRelayMappings_e twoPipeRelay = 4; // Relay mappings for 2 Pipe FCU profile
  	    FourPipeRelayMappings_e fourPipeRelay = 5; // Relay mappings for 4 pipe FCU profile
    };
}


enum CpuAoutMappings_e {
  CPU_AOUT_NONE = 0;
  CPU_AOUT_COOLING = 1;
  CPU_AOUT_FANSPEED = 2;
  CPU_AOUT_HEATING = 3;
  CPU_AOUT_DCVDAMPER = 4;
  CPU_AOUT_FANSPEEDSTAGED = 5;
  CPU_AOUT_NUM_OF = 6;
}


enum HpuAoutMappings_e {
  HPU_AOUT_NONE = 0;
  HPU_AOUT_COMPSPEED = 1;
  HPU_AOUT_FANSPEED = 2;
  HPU_AOUT_DCVDAMPER = 3;
  HPU_AOUT_NUM_OF = 4;
}

enum TwoPipeAoutMappings_e {
  P2_AOUT_NONE = 0;
  P2_AOUT_WATER_VALVE = 1;
  P2_FAN_SPEED = 2;
  P2_DCV_DAMPER = 3;
  P2_AOUT_NUM_OF = 4;
}

enum FourPipeAoutMappings_e {
  P4_AOUT_NONE = 0;
  P4_AOUT_WATER_VALVE_COOL = 1;
  P4_FAN_SPEED = 2;
  P4_AOUT_WATER_VALVE_HEAT = 3;
  P4_DCV_DAMPER = 4;
  P4_AOUT_NUM_OF = 5;
}

message MyStatAnalogOut_t {
   bool analogOutEnable = 1;
    oneof analogOutMapping {
        CpuAoutMappings_e cpuAoutMapping = 2; // AOUT ENUM for CPU Profile
  	    HpuAoutMappings_e hpuAoutMapping = 3; // AOUT ENUM for HPU profile
  	    TwoPipeAoutMappings_e twoPipeAoutMapping = 4; // AOUT ENUM for 2Pipe FCU Profile
  	    FourPipeAoutMappings_e fourPipeAoutMapping = 5; // AOUT ENUM for 4Pipe FCU Profile
    }
    uint32 analogOutAtMinSetting = 6; // Voltage at which the cooler/damper/fan is at minimum position(1/10 V)
    uint32 analogOutAtMaxSetting = 7; // Voltage at which the cooler/damper/fan is at maximum position(1/10 V)
}

message MyStatTunersGeneric_t {
  uint32 unoccupiedSetback = 1; // Amount by which temperature is setback when no occupancy is detected 1/10 of a degree F (Currently not used)
  uint32 minFanRuntimePostconditioning = 2; // Time in minutes before switching the fan completely so that heat/cool is completely disappiated
  uint32 relayActivationHysteresis = 3; // Hysterisis value used for changing relay
  uint32 analogFanSpeedMultiplier = 4; // 1/10 of multiplier value for fan speed
  uint32 humidityHysteresis = 5; // Hysterisis value for setting humidifier and dehumidifier
  uint32 forcedOccupiedTime = 6; // Not used in standalone since schedules are not implemented yet
  uint32 autoAwayTime = 7; // Time in minutes after which autoaway mode is activated 
  uint32 autoAwayZoneSetbackTemp = 8; //  When no occupancy /keycard detected. 1/10 of deg F. 
}

message MyStatTunersFcu_t {
  uint32 auxHeatingActivate  = 1; // 1/10 of the temperature value
  uint32 twoPipeHeatingThreshold = 2; //Typical values 70-130
  uint32 twoPipeCoolingThreshold = 3; // Typical values 35-70
  uint32 waterValveSamplingOnTime = 4; // Typical value 0-30
  uint32 waterValveSamplingWaitTime = 5; // Typical value 5-300
  uint32 waterValveSamplingDuringLoopDeadbandOnTime = 6; // Typical value 0-30
  uint32 waterValveSamplingDuringLoopDeadbandWaitTime = 7; // Typical value 5-300
}

message MyStatConfigsCpu_t {
  uint32 coolingStage1FanAnalogVoltage  = 1; // 1/10 of the volts
  uint32 coolingStage2FanAnalogVoltage  = 2; // 1/10 of the voltsvolts
  uint32 heatingStage1FanAnalogVoltage  = 3; // 1/10 of the volts
  uint32 heatingStage2FanAnalogVoltage  = 4; // 1/10 of the volts
  uint32 analogoutAtRecFanAnalogVoltage = 5; // The voltage at which fan should be operated is determined based on configuration parameter called Analog2atRecirc.
}

message MyStatLinearFanSpeeds_t {
  uint32 linearFanLowSpeedLevel  = 1; // in percentage
  uint32 linearFanHighSpeedLevel  = 2; // in percentage
}

message MyStatStagedFanSpeeds_t {
  uint32 stagedFanLowSpeedLevel  = 1; // in percentage
  uint32 stagedFanHighSpeedLevel  = 2; // in percentage
}

message MyStatUsp1UniversalMode_t {
  uint32 uin1mode  = 1; // Sensor Index
  uint32 uin2mode  = 2; // Sensor Index
}

message MyStatSettingsMessage_t {
  string roomName = 1; //[(nanopb).max_size = 25];
  int32 maxHeatingUserTemp = 2; // Maximum temperature the user can set in degrees F (default 70)
  int32 minHeatingUserTemp = 3; // Minimum temperature the user can set in degrees F (default 67)
  int32 maxCoolingUserTemp = 4; // Maximum temperature the user can set in degrees F (default 77)
  int32 minCoolingUserTemp = 5; // Minimum temperature the user can set in degrees F (default 74)
  sint32 temperatureOffset = 6; // Offset to be added to the measured room temperature (default 0). Unit is 1/10 of a degree F.
  int32 heatingDeadBand = 7; // Amount above set temperature at which heating is activated. Unit is 1/10 of a degree F.
  int32 coolingDeadBand = 8; // Amount below set temperature at which cooling is activated. Unit is 1/10 of a degree F.
  MyStatTemperatureMode_e temperatureMode = 9;
  int32 co2AlertTarget = 10;
  bool displayCO2 = 11;
  bool displayHumidity = 12;
  bool showCentigrade = 13; // 0: show Fahrenheit, 1: show Celsius
  /* miscSettings
       bit 0: enableExternal10kTemperatureSensor(1 if external sensor is enabled 
       bit 1: disableTouch(1 will disable touch)
       bit 2: brightnessVariationEnable (1 will enable automatic brightness control) */
  uint32 miscSettings1 =14;
  bool beaconingEnabled = 15; // 0 if beaconing disabled, 1 if beaconing enabled
  uint32 humidityMinSetpoint = 16; // Minimum humidity setpont 0-100% in which MyStat will set system to Humidify if humidity level is less than
  uint32 humidityMaxSetpoint = 17; // Maximum humidity setpont 0-100% in which MyStat will set system to Dehumidity/Dry if humidity level is greater than
  uint32 occupancySensorSensitivityLevel = 18; // Sensitivity level setting for the motion sensor 1-10, one being the most sensitive 
  MyStatLinearFanSpeeds_t mystatLinearFanSpeeds = 19; // When linear fan is enabled these voltages provide user intent
  MyStatStagedFanSpeeds_t mystatStagedFanSpeeds = 20;   // When staged fan is enabled these voltages provide user intent
  optional uint32 myStatUsp1UniversalInputModeBitmap  = 21; // For each Uinversal input of four USP1 address
}

message MyStatSettingsMessage2_t {
  MyStatProfiles_t profile = 1;  // Current profile to be executed on MyStat
  bool enableForceOccupied = 2;
  bool enableAutoAway = 3;
  repeated MyStatRelay_t mystatRelayConfig = 4;
  MyStatAnalogOut_t MyStatAnalogOutConfig = 5;
  uint32 mystatUniversalInConfig = 6;
  uint32 zoneCO2DamperOpeningRate = 7; // Same as system/ 10 (%/100ppm) 
  uint32 zoneCO2Threshold = 8; // Same as system/800 (ppm)  
  uint32 zoneCO2Target = 9; // Same as system/1000 (ppm) 
  uint32 proportionalConstant = 10; // default 50 - k constants for Proportional in 1/100
  uint32 integralConstant = 11; // default 50 - k constant for Integral in 1/100
  uint32 proportionalTemperatureRange = 12; // default 15 - temp range in 1/10 deg that the proportional control will apply
  uint32 integrationTime = 13; // default 30 - time in  minutes the integration takes to max out
  optional MyStatTunersGeneric_t genericTuners = 14; // Generic tuner
    oneof profileSpecificTuners {
  	 MyStatTunersFcu_t  fcuTuners = 15;
  	 MyStatConfigsCpu_t myStatConfigsCpu = 16; // When staged fan is enabled in CPU profile these voltages provide the fan speed control
    }
}

enum MyStatFanSpeed_e {
  MYSTAT_FAN_SPEED_OFF = 0;
  MYSTAT_FAN_SPEED_AUTO = 1;
  MYSTAT_FAN_SPEED_LOW = 2;
  MYSTAT_FAN_SPEED_HIGH = 3;
  MYSTAT_FAN_SPEED_NUM_OF = 4;
}

enum MyStatConditioningMode_e {
  MYSTAT_CONDITIONING_MODE_OFF = 0;
  MYSTAT_CONDITIONING_MODE_AUTO = 1;
  MYSTAT_CONDITIONING_MODE_HEATING = 2;
  MYSTAT_CONDITIONING_MODE_COOLING = 3;
  MYSTAT_CONDITIONING_MODE_NUM_OF = 4;
}

enum MyStatOperatingMode_e {
  MYSTAT_OPERATING_MODE_OFF = 0;
  MYSTAT_OPERATING_MODE_HEATING = 1;
  MYSTAT_OPERATING_MODE_COOLING = 2;
  MYSTAT_OPERATING_MODE_NUM_OF = 3;
}

message MyStatSystemTimePb_t {
  int32 day = 1; // The day of the week. Refer to ::DayOfWeek_t for a mapping of values.
  int32 hours = 2; // Number of hours passed since midnight, from 0 to 23
  int32 minutes = 3; // Number of minutes passed, from 0 to 59
}

message MyStatAnalogOutputControl_t {
  int32 percent = 1; // Determines the output level (0-100%)
  bool pulseEnabled = 2; // 1 if the output should be pulsed, 0 if the output is a constant voltage
}

message MyStatControlsMessage_t {
  MyStatSystemTimePb_t time = 1; // Used to update the current system time
  int32 setTempCooling = 2; // The desired room temperature. Measured in 2x degrees F. Default 150 (i.e. 75 degrees F).
  int32 setTempHeating = 3; // The desired room temperature. Measured in 2x degrees F. Default 150 (i.e. 75 degrees F).
  MyStatFanSpeed_e fanSpeed = 4; // The desired fan speed
  MyStatConditioningMode_e conditioningMode = 5;
  MyStatOperatingMode_e operatingMode = 6; // The current operating mode
  optional uint32 relayBitmap = 7; // relay bitmap for MyStat
  optional bool reset = 8; // Force a reset of the device remotely when set to 1
  optional MyStatAnalogOutputControl_t analogOut1 = 9; // output for PWM channel 1
  optional bool unoccupiedMode = 10; // CCU in scheduled unoccupied mode
}

message MyStatRegularUpdateCommon_t {
  optional int32 lqi = 1; // Link Quality Indicator of last received data packet
  optional int32 rssi = 2; // Received Signal Strength Indicator of last received data packet
  optional int32 roomTemperature = 3; // Room temperature in 1/10 of a degree F. This is the adjusted temp and is offset + measured temp.
  optional int32 humidity = 4; // Humidity in 1/10 of a percent
  optional int32 co2 = 5;
  optional bool occupantDetected = 6; // 0 is no, 1 is yes
}

message MyStatLocalControlsOverrideMessage_t {
  optional int32 setTempCooling = 1; // The user-specified set temperature. Measured in 2x degrees F.
  optional int32 setTempHeating = 2; // The user-specified set temperature. Measured in 2x degrees F.
  optional MyStatFanSpeed_e fanSpeed = 3; // The user-specified fan speed
  optional MyStatConditioningMode_e conditioningMode = 4;
}

message MyStatCcuDatabaseSeedMessage_t {
  bytes encryptionKey = 1; // [(nanopb).max_size = 16, (nanopb).fixed_length = true]; // The encryption key to use for data sent over the mesh network to/from this device
  bytes serializedSettingsData = 2;  //[(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type MYSTAT_SETTINGS_MESSAGE
  bytes serializedControlsData = 3;  //[(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type MYSTAT_CONTROLS_MESSAGE
  bytes serializedSettings2Data = 4; // [(nanopb).max_size = 109, (nanopb).fixed_length = false]; // fixed type MYSTAT_SETTINGS2_MESSAGE
}

message MyStatSensorReadingPb_t {
  int32 sensorType = 1; // Refer to ::SensorType_t for an enumeration of supported sensor types
  int32 sensorData = 2; // Refer to ::SensorType_t for units of measurement.
}


message MyStatRegularUpdateMessage_t {
  optional MyStatRegularUpdateCommon_t regularUpdateCommon = 1;
  optional uint32 universalInput1Value = 2; // 16 bits of data where bit[15] = mode, bits[14..0] = value. If mode = 0 (Voltage), in units of millivolts, If mode = 1 (Thermistor), in units of tens of ohms
  optional uint32 doorWindowSensor = 3; // 16 bits of data where bit[15] = mode, bits[14..0] = value. If mode = 0 (Voltage), in units of millivolts, If mode = 1 (Thermistor), in units of tens of ohms
}

message MyStatIduControlsMessage_t {
  int32 operationMode = 1;
  int32 fanSpeed = 2;
  int32 airflowDirection = 3;
  sint32 heatingSetTemperature = 4;
  sint32 coolingSetTemperature = 5;
  int32 masterController = 6;
}

message MyStatIduStatusMessage_t {
  int32 indoorUnitState = 1; // Reflects the state of an indoor unit connected to the MyStat
  int32 responseType = 2; // Indicates if IDU status message is being sent in response to an IDU controls message or periodically
  int32 supportBitfield = 3;
  int32 supportFanSpeedControlLevels = 4;
  int32 operationMode = 5;
  int32 setOperationMode = 6;
  int32 masterOperationMode = 7;
  int32 fanSpeed = 8;
  int32 airflowDirection = 9;
  int32 coolHeatRight = 10;
  sint32 setTemperature = 11;
  int32 filterStatus = 12;
  int32 groupAddress = 13;
  int32 errorStatus = 14;
  int32 diagnosticStatus = 15;
  int32 iduTemperature = 16;
  repeated int32 thData = 17; //[(nanopb).max_count = 6]; //Temp reading from 6 thermistors.
}

